--- a/client/main.html
+++ b/client/main.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+  {{> loginButtons}}
   <div id="render-target"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
@@ -14,6 +15,7 @@
 </body>
 
 <template name = 'chat'>
+
 	<h3>Chat with opponent</h3>
   		<form> 
 	  		<label>Message</label>
