--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,8 @@
   <title>MinesweeperTeam</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Bootswatch template -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootswatch/3.3.7/spacelab/bootstrap.min.css" />
 </head>
 
 <body>
