--- a/client/main.html
+++ b/client/main.html
@@ -5,7 +5,7 @@
   <!-- Bootswatch template -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootswatch/3.3.7/spacelab/bootstrap.min.css" />
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Autour One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Autour%20One" rel="stylesheet">
 </head>
 
 <body>
